perf: convert all assets to webp (90%+ smaller)

--- a/public/redesign-v5.html
+++ b/public/redesign-v5.html
@@ -1481,7 +1481,7 @@ html, body {
 <!-- ═══ SCREEN 1: UMBRAL ═══ -->
 <section id="umbral" class="screen active">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-1.png" alt="" class="bg-umbral">
+    <img src="assets/backgrounds/brasa/state-1.webp" alt="" class="bg-umbral">
     <div class="screen-bg-overlay"></div>
   </div>
   <div class="umbral-landscape">
@@ -1501,10 +1501,10 @@ html, body {
 <!-- ═══ SCREEN 2: EL MUNDO ═══ -->
 <section id="mundo" class="screen">
   <div class="mundo-bg-states" id="mundo-bg-states">
-    <img src="assets/backgrounds/brasa/state-1.png" alt="" data-state="1" class="bg-active">
-    <img src="assets/backgrounds/brasa/state-2.png" alt="" data-state="2">
-    <img src="assets/backgrounds/brasa/state-3.png" alt="" data-state="3">
-    <img src="assets/backgrounds/brasa/state-4.png" alt="" data-state="4">
+    <img src="assets/backgrounds/brasa/state-1.webp" alt="" data-state="1" class="bg-active">
+    <img src="assets/backgrounds/brasa/state-2.webp" alt="" data-state="2">
+    <img src="assets/backgrounds/brasa/state-3.webp" alt="" data-state="3">
+    <img src="assets/backgrounds/brasa/state-4.webp" alt="" data-state="4">
     <div class="mundo-bg-overlay"></div>
   </div>
   <div class="mundo-parallax" id="mundo-parallax">
@@ -1530,7 +1530,7 @@ html, body {
   <canvas class="particle-canvas" id="mundo-particles"></canvas>
   <div class="reggie-container">
     <div class="reggie-aura"></div>
-    <img src="assets/reggie/brasa.png" alt="Reggie" class="reggie-sprite-mundo" id="reggie-mundo-sprite">
+    <img src="assets/reggie/brasa.webp" alt="Reggie" class="reggie-sprite-mundo" id="reggie-mundo-sprite">
     <div class="reggie-particle"></div>
     <div class="reggie-particle"></div>
     <div class="reggie-particle"></div>
@@ -1569,10 +1569,10 @@ html, body {
 <!-- ═══ SCREEN 3: DIÁLOGO ═══ -->
 <section id="dialogo" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-2.png" alt="" class="bg-dialogo">
+    <img src="assets/backgrounds/brasa/state-2.webp" alt="" class="bg-dialogo">
     <div class="screen-bg-overlay"></div>
   </div>
-  <img src="assets/reggie/brasa.png" alt="Reggie" class="dialogo-reggie-float" id="dialogo-reggie-sprite">
+  <img src="assets/reggie/brasa.webp" alt="Reggie" class="dialogo-reggie-float" id="dialogo-reggie-sprite">
   <div class="dialogo-container">
     <div>
       <div class="msg-reggie-label">reggie</div>
@@ -1607,8 +1607,8 @@ html, body {
 <!-- ═══ SCREEN 4: FRACTURA ═══ -->
 <section id="fractura" class="screen">
   <div class="fractura-bg-states" id="fractura-bg-states">
-    <img src="assets/backgrounds/brasa/state-1.png" alt="" data-state="1">
-    <img src="assets/backgrounds/brasa/state-4.png" alt="" data-state="4">
+    <img src="assets/backgrounds/brasa/state-1.webp" alt="" data-state="1">
+    <img src="assets/backgrounds/brasa/state-4.webp" alt="" data-state="4">
   </div>
   <div class="fractura-bg-overlay" id="fractura-bg-overlay"></div>
   <div class="fractura-crack" id="fractura-crack"></div>
@@ -1620,7 +1620,7 @@ html, body {
     <div class="fractura-vine"></div>
     <div class="fractura-vine"></div>
   </div>
-  <img src="assets/reggie/brasa.png" alt="Reggie" class="fractura-reggie" id="fractura-reggie-sprite">
+  <img src="assets/reggie/brasa.webp" alt="Reggie" class="fractura-reggie" id="fractura-reggie-sprite">
   <div id="fractura-burst"></div>
   <div class="fractura-text" id="fractura-text">
     <h2>Lo viejo cede. Lo nuevo crece.</h2>
@@ -1633,7 +1633,7 @@ html, body {
 <!-- ═══ SCREEN 5: DESPERTAR ═══ -->
 <section id="despertar" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-1.png" alt="" class="bg-despertar">
+    <img src="assets/backgrounds/brasa/state-1.webp" alt="" class="bg-despertar">
     <div class="screen-bg-overlay"></div>
   </div>
   <canvas class="particle-canvas" id="despertar-particles"></canvas>
@@ -1653,7 +1653,7 @@ html, body {
 <!-- ═══ SCREEN 6: EL ORIGEN ═══ -->
 <section id="origen" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-1.png" alt="" class="bg-origen">
+    <img src="assets/backgrounds/brasa/state-1.webp" alt="" class="bg-origen">
     <div class="screen-bg-overlay"></div>
   </div>
   <canvas class="particle-canvas" id="origen-particles"></canvas>
@@ -1672,7 +1672,7 @@ html, body {
 <!-- ═══ SCREEN 7: ACCESO ═══ -->
 <section id="acceso" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-2.png" alt="" class="bg-acceso">
+    <img src="assets/backgrounds/brasa/state-2.webp" alt="" class="bg-acceso">
     <div class="screen-bg-overlay"></div>
   </div>
   <div class="acceso-mist"></div>
@@ -1693,7 +1693,7 @@ html, body {
 <!-- ═══ SCREEN 8: ELECCIÓN ═══ -->
 <section id="eleccion" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-2.png" alt="" class="bg-eleccion">
+    <img src="assets/backgrounds/brasa/state-2.webp" alt="" class="bg-eleccion">
     <div class="screen-bg-overlay"></div>
   </div>
   <canvas class="particle-canvas" id="eleccion-particles"></canvas>
@@ -1702,7 +1702,7 @@ html, body {
     <div class="eleccion-essence" onclick="selectEssence(this, 'brasa')">
       <div class="essence-sprite-container">
         <div class="essence-glow essence-glow-brasa"></div>
-        <img src="assets/reggie/brasa.png" alt="Brasa" class="sprite-brasa">
+        <img src="assets/reggie/brasa.webp" alt="Brasa" class="sprite-brasa">
       </div>
       <span class="essence-name">Brasa</span>
       <span class="essence-quote">Lo que queda después del fuego aún calienta.</span>
@@ -1710,7 +1710,7 @@ html, body {
     <div class="eleccion-essence" onclick="selectEssence(this, 'niebla')">
       <div class="essence-sprite-container">
         <div class="essence-glow essence-glow-niebla"></div>
-        <img src="assets/reggie/niebla.png" alt="Niebla" class="sprite-niebla">
+        <img src="assets/reggie/niebla.webp" alt="Niebla" class="sprite-niebla">
       </div>
       <span class="essence-name">Niebla</span>
       <span class="essence-quote">Lo esencial se revela cuando lo demás se oculta.</span>
@@ -1718,7 +1718,7 @@ html, body {
     <div class="eleccion-essence" onclick="selectEssence(this, 'cristal')">
       <div class="essence-sprite-container">
         <div class="essence-glow essence-glow-cristal"></div>
-        <img src="assets/reggie/cristal.png" alt="Cristal" class="sprite-cristal">
+        <img src="assets/reggie/cristal.webp" alt="Cristal" class="sprite-cristal">
       </div>
       <span class="essence-name">Cristal</span>
       <span class="essence-quote">La presión crea lo que el tiempo no puede destruir.</span>
@@ -1737,7 +1737,7 @@ html, body {
   <div class="nacimiento-dark" id="nacimiento-dark"></div>
   <div class="nacimiento-light" id="nacimiento-light"></div>
   <div id="nacimiento-converge-container"></div>
-  <img src="assets/reggie/brasa.png" alt="Reggie" class="nacimiento-sprite" id="nacimiento-sprite">
+  <img src="assets/reggie/brasa.webp" alt="Reggie" class="nacimiento-sprite" id="nacimiento-sprite">
   <div class="nacimiento-text" id="nacimiento-text">Está despertando...</div>
   <canvas class="particle-canvas" id="nacimiento-particles"></canvas>
   <div class="vignette"></div>
@@ -1746,11 +1746,11 @@ html, body {
 <!-- ═══ SCREEN 10: CAPTURA ═══ -->
 <section id="captura" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-3.png" alt="" class="bg-captura">
+    <img src="assets/backgrounds/brasa/state-3.webp" alt="" class="bg-captura">
     <div class="screen-bg-overlay"></div>
   </div>
   <div class="captura-container">
-    <img src="assets/reggie/brasa.png" alt="Reggie" class="captura-reggie-float" id="captura-reggie-sprite">
+    <img src="assets/reggie/brasa.webp" alt="Reggie" class="captura-reggie-float" id="captura-reggie-sprite">
     <h2 class="captura-header">Reggie quiere ver tu mundo</h2>
     <p class="captura-prompt">Hay algo allá afuera que brilla sin electricidad... ¿me lo mostrarías?</p>
     <div class="captura-buttons">
@@ -1778,7 +1778,7 @@ html, body {
 <!-- ═══ SCREEN 11: LA RED ═══ -->
 <section id="lared" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/brasa/state-3.png" alt="" class="bg-lared">
+    <img src="assets/backgrounds/brasa/state-3.webp" alt="" class="bg-lared">
     <div class="screen-bg-overlay"></div>
   </div>
   <canvas class="particle-canvas" id="lared-particles"></canvas>
@@ -1792,7 +1792,7 @@ html, body {
       <div class="lared-whisper">Dos viajeros se encontraron en silencio. El mundo se iluminó brevemente.</div>
     </div>
     <div class="lared-presence">
-      <img src="assets/reggie/brasa.png" alt="Reggie" class="lared-mini-reggie" id="lared-reggie-sprite">
+      <img src="assets/reggie/brasa.webp" alt="Reggie" class="lared-mini-reggie" id="lared-reggie-sprite">
       <span class="lared-presence-text">Tu Brasa late suavemente... estás conectado a la red.</span>
     </div>
     <div class="lared-pulse-section">
@@ -1806,17 +1806,17 @@ html, body {
 <!-- ═══ SCREEN 12: OTRO VIAJERO ═══ -->
 <section id="viajero" class="screen">
   <div class="screen-bg">
-    <img src="assets/backgrounds/cristal/state-3.png" alt="" class="bg-viajero">
+    <img src="assets/backgrounds/cristal/state-3.webp" alt="" class="bg-viajero">
     <div class="screen-bg-overlay"></div>
   </div>
   <canvas class="particle-canvas" id="viajero-particles"></canvas>
   <div class="viajero-container">
     <span class="viajero-note">Estás visitando el viaje de alguien más.</span>
-    <img src="assets/reggie/cristal.png" alt="Lumina" class="viajero-reggie">
+    <img src="assets/reggie/cristal.webp" alt="Lumina" class="viajero-reggie">
     <span class="viajero-name">Lumina</span>
     <span class="viajero-type">💎 Cristal</span>
     <div class="viajero-world">
-      <img src="assets/backgrounds/cristal/state-3.png" alt="">
+      <img src="assets/backgrounds/cristal/state-3.webp" alt="">
       <div class="viajero-world-ground"></div>
     </div>
     <div class="viajero-progress">
@@ -1869,7 +1869,7 @@ function switchType(type) {
     b.classList.toggle('active', b.dataset.type === type);
   });
 
-  const spritePath = `assets/reggie/${type}.png`;
+  const spritePath = `assets/reggie/${type}.webp`;
 
   // Update all Reggie sprites
   const spriteIds = ['reggie-mundo-sprite', 'dialogo-reggie-sprite', 'fractura-reggie-sprite', 'nacimiento-sprite', 'captura-reggie-sprite', 'lared-reggie-sprite'];
@@ -1889,14 +1889,14 @@ function switchType(type) {
 function updateBackgrounds(type) {
   // Screen backgrounds (single images)
   const bgMap = {
-    'bg-umbral': `assets/backgrounds/${type}/state-1.png`,
-    'bg-despertar': `assets/backgrounds/${type}/state-1.png`,
-    'bg-origen': `assets/backgrounds/${type}/state-1.png`,
-    'bg-acceso': `assets/backgrounds/${type}/state-2.png`,
-    'bg-eleccion': `assets/backgrounds/${type}/state-2.png`,
-    'bg-dialogo': `assets/backgrounds/${type}/state-2.png`,
-    'bg-captura': `assets/backgrounds/${type}/state-3.png`,
-    'bg-lared': `assets/backgrounds/${type}/state-3.png`,
+    'bg-umbral': `assets/backgrounds/${type}/state-1.webp`,
+    'bg-despertar': `assets/backgrounds/${type}/state-1.webp`,
+    'bg-origen': `assets/backgrounds/${type}/state-1.webp`,
+    'bg-acceso': `assets/backgrounds/${type}/state-2.webp`,
+    'bg-eleccion': `assets/backgrounds/${type}/state-2.webp`,
+    'bg-dialogo': `assets/backgrounds/${type}/state-2.webp`,
+    'bg-captura': `assets/backgrounds/${type}/state-3.webp`,
+    'bg-lared': `assets/backgrounds/${type}/state-3.webp`,
   };
   Object.entries(bgMap).forEach(([cls, src]) => {
     const el = document.querySelector(`.${cls}`);
@@ -1908,7 +1908,7 @@ function updateBackgrounds(type) {
   if (mundoBg) {
     mundoBg.querySelectorAll('img').forEach(img => {
       const state = img.dataset.state;
-      if (state) img.src = `assets/backgrounds/${type}/state-${state}.png`;
+      if (state) img.src = `assets/backgrounds/${type}/state-${state}.webp`;
     });
   }
 
@@ -1916,8 +1916,8 @@ function updateBackgrounds(type) {
   const fracturaBg = document.getElementById('fractura-bg-states');
   if (fracturaBg) {
     const imgs = fracturaBg.querySelectorAll('img');
-    if (imgs[0]) imgs[0].src = `assets/backgrounds/${type}/state-1.png`;
-    if (imgs[1]) imgs[1].src = `assets/backgrounds/${type}/state-4.png`;
+    if (imgs[0]) imgs[0].src = `assets/backgrounds/${type}/state-1.webp`;
+    if (imgs[1]) imgs[1].src = `assets/backgrounds/${type}/state-4.webp`;
   }
 }
 
